adding features and bug fixes
