# server/docs/swagger.json
@@ -1069,6 +1069,77 @@
                     }
                 }
             }
+        },
+        "/v1/users/admin/create": {
+            "post": {
+                "description": "Create first admin user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "create the first admin user.",
+                "parameters": [
+                    {
+                        "description": "New User",
+                        "name": "payload",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/users/{userID}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Update user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "update the user.",
+                "parameters": [
+                    {
+                        "description": "Updated User",
+                        "name": "payload",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1209,6 +1280,14 @@
                     "description": "Determines if the collection is visible on the homepage\nIf protected is true, then it won't show regardless",
                     "type": "boolean"
                 },
+                "reminder": {
+                    "description": "If the gallery should send out an automated reminder\nReminder gets sent 5 days prior to expiration",
+                    "type": "boolean"
+                },
+                "reminder_emails": {
+                    "description": "If reminders are enabled, we need to have the emails to send to\nThese are a space separated list of emails",
+                    "type": "string"
+                },
                 "title": {
                     "description": "Title of the gallery",
                     "type": "string"
@@ -1248,6 +1327,12 @@
                 },
                 "public": {
                     "type": "boolean"
+                },
+                "reminder": {
+                    "type": "boolean"
+                },
+                "reminder_emails": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
@@ -1302,10 +1387,6 @@
         "models.Settings": {
             "type": "object",
             "properties": {
-                "client_webhook_url": {
-                    "description": "// Photographer is the photographer's information.\nPhotographer Photographer `json:\"photographer\" gorm:\"embedded;embeddedPrefix:photographer_\"`\n// The theme for the frontend.\nTheme Theme `json:\"theme\" gorm:\"embedded;embeddedPrefix:theme_\"`\nClient webhook URL for redeploying the client.",
-                    "type": "string"
-                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -1314,6 +1395,10 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "new_application": {
+                    "description": "NewApplication will alert the frontend that there are no users and we need to create admin",
+                    "type": "boolean"
                 },
                 "update": {
                     "description": "Update is a flag that indicates if the client has backend updates to catch up on.",
@@ -1350,10 +1435,6 @@
         "models.User": {
             "type": "object",
             "properties": {
-                "clientUpdateAvailable": {
-                    "description": "ClientUpdateAvailable is a flag that indicates if the client has an update available.",
-                    "type": "boolean"
-                },
                 "createdAt": {
                     "type": "string"
                 },
